[gd_scene load_steps=2 format=3 uid="uid://game_table"]

[ext_resource type="Script" path="res://src/ui/screens/GameTableScreen.gd" id="1_script"]

[node name="GameTableScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.12, 0.08, 1)

[node name="CharacterPanels" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 50.0
offset_right = 1720.0
offset_bottom = 180.0
theme_override_constants/separation = 100
alignment = 1

[node name="Panel1" type="Panel" parent="CharacterPanels"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2

[node name="NameLabel" type="Label" parent="CharacterPanels/Panel1"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 40.0
text = "NPC A"

[node name="Panel2" type="Panel" parent="CharacterPanels"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2

[node name="NameLabel" type="Label" parent="CharacterPanels/Panel2"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 40.0
text = "NPC B"

[node name="Panel3" type="Panel" parent="CharacterPanels"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2

[node name="NameLabel" type="Label" parent="CharacterPanels/Panel3"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 40.0
text = "玩家"

[node name="Panel4" type="Panel" parent="CharacterPanels"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2

[node name="NameLabel" type="Label" parent="CharacterPanels/Panel4"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 40.0
text = "NPC C"

[node name="CardGrid" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 250.0
offset_right = 1360.0
offset_bottom = 670.0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="CupsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 700.0
offset_right = 250.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 20
text = "当前杯数: 2杯"

[node name="AlcoholLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 700.0
offset_right = 550.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 20
text = "酒类型: 基础款"

[node name="RoundLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 700.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 20
text = "回合: 0"

[node name="DrawButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1450.0
offset_top = 600.0
offset_right = 1650.0
offset_bottom = 660.0
theme_override_font_sizes/font_size = 24
text = "抽牌"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1450.0
offset_top = 680.0
offset_right = 1650.0
offset_bottom = 740.0
theme_override_font_sizes/font_size = 24
text = "使用道具"

[node name="ConfirmButton" type="Button" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 700.0
offset_right = 1060.0
offset_bottom = 760.0
theme_override_font_sizes/font_size = 24
text = "确认并开始"
